[tool.poetry]
name = "topics"
version = "0.1.0"
description = "Topic Modeling"
authors = ["Prayson W. Daniel <prayson.wilfred@nttdata.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.14,<3.10.1"
bertopic = {extras = ["spacy"], version = "^0.12.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
